--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,12 @@
   color: #484848;
 }
 
+.container{
+  padding: 0 1.5em;
+}
+
+/* Início header */
+
 header{
   padding: 0px 1.5em;
   box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.18);
@@ -36,6 +42,7 @@ nav ul li a{
 }
 
 .btn_cadastro{
+  border: 1px solid rgba(0, 0, 0, 0.08);
   padding: 0 16px;
   border-radius: 50px;
   box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.18);
@@ -46,3 +53,98 @@ nav ul li a{
   align-items: center;
   margin-left: 1em;
 }
+/* Fim header */
+
+/* Início Section acomodações */
+
+.text-header{
+  padding: 50px 0 0 0;
+}
+
+p{
+  font-size: 14px;
+  padding: 0 0 8px 0;
+}
+
+h1{
+  font-size: 32px;
+  color: #000;
+}
+
+.filtros{
+  display: flex;
+  padding: 20px 0 0 0;
+}
+
+.button-filtro{
+  padding: 4px 8px 4px 0;
+  font-size: 14px;
+  
+}
+
+button{
+  cursor: pointer;
+  padding: 8px 16px;
+  border: 1px solid #2222;
+  border-radius: 25px;
+  background: #fff;
+}
+
+button:hover{
+  padding: 8px 16px;
+  border: 1px solid #484848;
+  border-radius: 25px;
+  background: #fff;
+}
+
+.aviso-resticao{
+  display: flex;
+  margin-top: 20px;
+}
+
+.aviso-resticao img{
+  width: 40px;
+  height: 40px;
+  margin-right: 10px;
+}
+
+.aviso-resticao span{
+  font-weight: 700;
+  color: #000;
+}
+
+/* Fim Section acomodações */
+
+
+/* Início listagem quartos */
+
+.card-quarto{
+  height: 228px;
+  background: #fff;
+  display: flex;
+  box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.18);
+}
+
+.card-quarto img{
+  width: 300px;
+  height: 200px;
+  border-radius: 4px;
+}
+
+.card-quarto span{
+  font-size: 14px;
+}
+
+.card-quarto h2{
+  font-weight: 200;
+  color: #000;
+  font-size: 18px;
+}
+
+.price span{
+  font-weight: bold;
+  color: #000;
+  font-size: 16px;
+}
+
+/* Fim listagem quartos */
