--- a/styles.css
+++ b/styles.css
@@ -123,6 +123,7 @@ button:hover{
   background: #fff;
   display: flex;
   box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.18);
+  justify-content: space-between;
 }
 
 .card-quarto img{
@@ -139,12 +140,24 @@ button:hover{
   font-weight: 200;
   color: #000;
   font-size: 18px;
+  margin: .6em 0 1em 0;
+}
+
+.price{
+  width: 150px;
+  bottom: 0;
+  right: 0px;
+  display: flex;
+  align-items: flex-end;
+  justify-content: flex-end;
+  right: 0px;
 }
 
 .price span{
   font-weight: bold;
   color: #000;
   font-size: 16px;
+  
 }
 
 /* Fim listagem quartos */
