--- a/styles.css
+++ b/styles.css
@@ -12,17 +12,18 @@
 
 /* Início header */
 
-header{
-  padding: 0px 1.5em;
-  box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.18);
-}
 
 nav{
+  padding: 0px 1.5em;
   display: flex;
   justify-content: space-between;
   width: 100%;
   height: 80px;
   align-items: center;
+  position: fixed;
+  z-index: 10;
+  background: #fff;
+  box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.18);
 }
 
 nav img{
@@ -35,6 +36,7 @@ nav ul{
   align-items: center;
   font-weight: 500;
   font-size: 14px;
+  margin-right: 4em;
 }
 
 nav ul li a{
@@ -118,6 +120,10 @@ button:hover{
 
 /* Início listagem quartos */
 
+.container-cards{
+  width: auto;
+}
+
 .card-quarto{
   height: 228px;
   background: #fff;
@@ -128,7 +134,7 @@ button:hover{
 }
 
 .infos-quarto{
-  width: 65%;
+  width: 40%;
 }
 
 .card-quarto img{
@@ -162,3 +168,23 @@ button:hover{
 }
 
 /* Fim listagem quartos */
+
+.all-content{
+  width: 50vw;
+  padding: 50px 0 0 0;
+  overflow-y: scroll;
+  margin: 0;
+}
+
+.content{
+  display: flex;
+}
+
+
+#map {
+  position: fixed !important;
+  height: 93vh;  /* The height is 400 pixels */
+  width: 45vw;  /* The width is the width of the web page */
+  right: 0;
+  bottom: 0;
+ }
